--- a/GlsunView.Domain/GlsunView.Domain.csproj
+++ b/GlsunView.Domain/GlsunView.Domain.csproj
@@ -121,6 +121,9 @@
     <Compile Include="v_Authority.cs">
       <DependentUpon>GlsunViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="v_LastestWeekAlarmStatistics.cs">
+      <DependentUpon>GlsunViewModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="v_ModuleAuthority.cs">
       <DependentUpon>GlsunViewModel.tt</DependentUpon>
     </Compile>
