--- a/GlsunView/GlsunView.WebUI.csproj
+++ b/GlsunView/GlsunView.WebUI.csproj
@@ -184,7 +184,9 @@
     <Content Include="Content\css\zTreeStyle.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
-    <Content Include="image\1U.PNG" />
+    <Content Include="image\attention.png" />
+    <Content Include="image\authority.png" />
+    <Content Include="image\bonus.png" />
     <Content Include="image\device\1U-FAN.jpg" />
     <Content Include="image\device\2U-FAN.jpg" />
     <Content Include="image\device\4U-FAN.jpg" />
@@ -196,9 +198,13 @@
     <Content Include="image\device\OEO.jpg" />
     <Content Include="image\device\OLP.jpg" />
     <Content Include="image\device\SFP-module.jpg" />
-    <Content Include="image\document_file.png" />
-    <Content Include="image\folder.png" />
-    <Content Include="image\timg.jpg" />
+    <Content Include="image\key_login.png" />
+    <Content Include="image\log_blue.png" />
+    <Content Include="image\log_gray.png" />
+    <Content Include="image\log_lightblue.png" />
+    <Content Include="image\options.png" />
+    <Content Include="image\role.png" />
+    <Content Include="image\time_clock.png" />
     <Content Include="image\toolbar\cursor.png" />
     <Content Include="image\toolbar\network.png" />
     <Content Include="image\toolbar\line.png" />
@@ -210,6 +216,11 @@
     <Content Include="image\topo\host.png" />
     <Content Include="image\topo\Subnet5.ico" />
     <Content Include="image\topo\Subnet6.ico" />
+    <Content Include="image\user.png" />
+    <Content Include="image\user_friend.png" />
+    <Content Include="image\user_woman.png" />
+    <Content Include="image\warn_blue.png" />
+    <Content Include="image\warn_yellow.png" />
     <Content Include="scripts\bootstrap-datetimepicker.min.js" />
     <Content Include="scripts\bootstrap-datetimepicker.zh-CN.js" />
     <Content Include="scripts\jquery.bootstrapmodal.js" />
@@ -220,21 +231,6 @@
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="image\abc128x128.png" />
-    <Content Include="image\apple.png" />
-    <Content Include="image\books.png" />
-    <Content Include="image\brush-pallet.png" />
-    <Content Include="image\chalkboard.png" />
-    <Content Include="image\clock.png" />
-    <Content Include="image\football.png" />
-    <Content Include="image\globe.png" />
-    <Content Include="image\graduation-hat.png" />
-    <Content Include="image\laptop.png" />
-    <Content Include="image\leather-bag.png" />
-    <Content Include="image\paper.png" />
-    <Content Include="image\pencil-scale.png" />
-    <Content Include="image\testtube.png" />
-    <Content Include="image\trophy.png" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
