拓扑设备背景状态更新测试

--- a/GlsunView/GlsunView.WebUI.csproj
+++ b/GlsunView/GlsunView.WebUI.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Models\Slot.cs" />
     <Compile Include="Models\TopologyLine.cs" />
     <Compile Include="Models\TopologyNode.cs" />
+    <Compile Include="Models\TopoNodeStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
