--- a/GlsunView/Web.config
+++ b/GlsunView/Web.config
@@ -30,6 +30,9 @@
     <authorization>
       <deny users="?" />
     </authorization>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Error/Error404"/>
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
