--- a/GlsunView/Web.config
+++ b/GlsunView/Web.config
@@ -7,7 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <connectionStrings>
     <!--<add name="GlsunViewEntities" connectionString="metadata=res://*/GlsunViewModel.csdl|res://*/GlsunViewModel.ssdl|res://*/GlsunViewModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GlsunView;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="GlsunViewEntities" connectionString="metadata=res://*/GlsunViewModel.csdl|res://*/GlsunViewModel.ssdl|res://*/GlsunViewModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GlsunView;uid=sa;pwd=as;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -31,7 +33,7 @@
       <deny users="?" />
     </authorization>
     <customErrors mode="On">
-      <error statusCode="404" redirect="~/Error/Error404"/>
+      <error statusCode="404" redirect="~/Error/Error404" />
     </customErrors>
   </system.web>
   <runtime>
@@ -88,4 +90,26 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <log4net debug="true">
+    <!--设置为true，开启log4net的内部调试-->
+    <!--appender定义日志的输出方式，只能作为 log4net 的子元素。name属性必须唯一，type属性必须指定-->
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Logs/" />
+      <param name="AppendToFile" value="true" />
+      <param name="StaticLogFileName" value="false" />
+      <Encoding value="UTF-8" />
+      <param name="DatePattern" value="yyyyMMdd&quot;.log&quot;" />
+      <param name="RollingStyle" value="Date" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="[%date] %-5level %logger %n%m%n%n" />
+      </layout>
+    </appender>
+    <!--logger-->
+    <root>
+      <level value="DEBUG" />
+      <!--DEBUG级别以上的事件才被记录-->
+      <!--引用的Appdender名字-->
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+  </log4net>
 </configuration>
