--- a/GlsunView.Infrastructure/GlsunView.Infrastructure.csproj
+++ b/GlsunView.Infrastructure/GlsunView.Infrastructure.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -95,6 +96,7 @@
     <Compile Include="Util\ExpansionMethod.cs" />
     <Compile Include="Util\JsonHelper.cs" />
     <Compile Include="Util\JsonResultEx.cs" />
+    <Compile Include="Util\MemoryCacheHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GlsunView.Domain\GlsunView.Domain.csproj">
