--- a/GlsunView.CommService/GlsunView.CommService.csproj
+++ b/GlsunView.CommService/GlsunView.CommService.csproj
@@ -51,6 +51,7 @@
     <Compile Include="CoreService\TcpClientService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TcpClientDetectTool.cs" />
+    <Compile Include="TcpClientServicePool.cs" />
     <Compile Include="TcpClientServiceTool.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
