--- a/GlsunView/GlsunView.WebUI.csproj
+++ b/GlsunView/GlsunView.WebUI.csproj
@@ -302,7 +302,9 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HistoryAlarmController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MachineFrameController.cs" />
     <Compile Include="Controllers\MachineRoomController.cs" />
+    <Compile Include="Controllers\MachineShelfController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\NMUCardController.cs" />
     <Compile Include="Controllers\OEOCardController.cs" />
@@ -394,6 +396,10 @@
     <Content Include="Views\TcpPool\Index.cshtml" />
     <Content Include="Views\MachineRoom\List.cshtml" />
     <Content Include="Views\MachineRoom\Create.cshtml" />
+    <Content Include="Views\MachineShelf\List.cshtml" />
+    <Content Include="Views\MachineShelf\Create.cshtml" />
+    <Content Include="Views\MachineFrame\List.cshtml" />
+    <Content Include="Views\MachineFrame\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
