设备视图完善与拓扑点击设置跳转到设备视图

--- a/GlsunView.Domain/GlsunView.Domain.csproj
+++ b/GlsunView.Domain/GlsunView.Domain.csproj
@@ -103,6 +103,12 @@
     <Compile Include="RoleAuthority.cs">
       <DependentUpon>GlsunViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Route.cs">
+      <DependentUpon>GlsunViewModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RouteGroup.cs">
+      <DependentUpon>GlsunViewModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="SceneLocation.cs">
       <DependentUpon>GlsunViewModel.tt</DependentUpon>
     </Compile>
