机框OLP主路灯显示修复

--- a/GlsunView/GlsunView.WebUI.csproj
+++ b/GlsunView/GlsunView.WebUI.csproj
@@ -193,6 +193,7 @@
     <Content Include="image\authority.png" />
     <Content Include="image\banner.gif" />
     <Content Include="image\bonus.png" />
+    <Content Include="image\cabinet.png" />
     <Content Include="image\device\1U-FAN.jpg" />
     <Content Include="image\device\2U-FAN.jpg" />
     <Content Include="image\device\4U-FAN.jpg" />
@@ -204,14 +205,27 @@
     <Content Include="image\device\OEO.jpg" />
     <Content Include="image\device\OLP.jpg" />
     <Content Include="image\device\SFP-module.jpg" />
+    <Content Include="image\frame\frame.png" />
+    <Content Include="image\group_objects.png" />
     <Content Include="image\key_login.png" />
+    <Content Include="image\link.png" />
     <Content Include="image\log_blue.png" />
     <Content Include="image\log_gray.png" />
     <Content Include="image\log_lightblue.png" />
     <Content Include="image\options.png" />
     <Content Include="image\role.png" />
+    <Content Include="image\route.png" />
+    <Content Include="image\route\group.png" />
+    <Content Include="image\route\group101.png" />
+    <Content Include="image\route\group102.png" />
+    <Content Include="image\route\group103.png" />
+    <Content Include="image\route\group104.png" />
+    <Content Include="image\route\route.png" />
+    <Content Include="image\structural.png" />
     <Content Include="image\time_clock.png" />
+    <Content Include="image\timg.jpg" />
     <Content Include="image\toolbar\cursor.png" />
+    <Content Include="image\toolbar\hand.png" />
     <Content Include="image\toolbar\network.png" />
     <Content Include="image\toolbar\line.png" />
     <Content Include="image\toolbar\star.png" />
@@ -222,9 +236,11 @@
     <Content Include="image\topo\host.png" />
     <Content Include="image\topo\Subnet5.ico" />
     <Content Include="image\topo\Subnet6.ico" />
+    <Content Include="image\tree-structure.png" />
     <Content Include="image\user.png" />
     <Content Include="image\user_friend.png" />
     <Content Include="image\user_woman.png" />
+    <Content Include="image\wacom.png" />
     <Content Include="image\warn_blue.png" />
     <Content Include="image\warn_yellow.png" />
     <Content Include="scripts\bootstrap-datetimepicker.min.js" />
