--- a/GlsunView/Web.config
+++ b/GlsunView/Web.config
@@ -20,6 +20,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <location path="~/Lisence/Index">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -34,7 +41,7 @@
     </authorization>
     <customErrors mode="On">
       <error statusCode="404" redirect="~/Error/Error404" />
-    </customErrors>
+    </customErrors>   
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
