--- a/GlsunView/packages.config
+++ b/GlsunView/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FluentScheduler" version="5.3.0" targetFramework="net452" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="jQuery.Form" version="4.2.2" targetFramework="net452" />
