--- a/GlsunView/Web.config
+++ b/GlsunView/Web.config
@@ -20,13 +20,6 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <location path="~/Lisence/Index">
-    <system.web>
-      <authorization>
-        <allow users="*" />
-      </authorization>
-    </system.web>
-  </location>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -36,13 +29,20 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"></forms>
     </authentication>
-    <authorization>
+    <!--<authorization>
       <deny users="?" />
-    </authorization>
+    </authorization>-->
     <customErrors mode="On">
       <error statusCode="404" redirect="~/Error/Error404" />
     </customErrors>   
   </system.web>
+  <location path="~/Lisence/Exception">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
